--- a/kki_product/views/product.xml
+++ b/kki_product/views/product.xml
@@ -14,6 +14,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='default_code']" position="after">
                     <field name="unified_id"/>
+                    <field name="category"/>
                 </xpath>
             </field>
         </record>
